added fly demo classes